src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback3_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback3_StringErrorContext.class */
public final class ARBTransformFeedback3_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glDrawTransformFeedbackStream(III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback3ErrorContext");
        methods.put("glBeginQueryIndexed(III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback3ErrorContext");
        methods.put("glEndQueryIndexed(II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback3ErrorContext");
        methods.put("nglGetQueryIndexediv(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback3ErrorContext");
        methods.put("glGetQueryIndexediv(IIILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback3ErrorContext");
        methods.put("glGetQueryIndexedi(III)I", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback3ErrorContext");
        methods.put("glGetQueryIndexediv(III[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback3ErrorContext");
        return methods;
    }
}
